dvgrab ChangeLog
(c) 2000-2003 Arne Schirmacher dvgrab@schirmacher.de
(c) 2002-2009 Dan Dennedy <dan@dennedy.org>

SEE the NEWS file for RELEASE NOTES!

----- v3.5 released -----

2009-09-07  Dan Dennedy <dan@dennegy.org>
	- iec13818-1.{h,cc}, iec13818-2.{h,cc}: apply patch from Arren to remove
	  compiler warnings (2804114).
	- filehandler.cc: apply fix to undefined return value in
	  QtHandler::GetFileSize() from Arren (2813664).
	- dvgrab.cc: remove (H)DV timeout and replace with "Waiting" message per
	  Carl Karsten's suggestion.
	- filehandler.cc: apply patch from Marcel Mol to allow both -timecode
	  and -timestamp or -timesys (2706278).
	- ieee1394io.cc: fix deadlock on SIGINT/SIGTERM with -stdin
	  or -input(2460025).

2009-04-10  Dan Dennedy <dan@dennegy.org>
	- main.cc: apply patch from Jarod Wilson to set retval to 1 if we get
	  an error, to make life easier for folks who wrap dvgrab to tell if
	  something went wrong (rhbz #486061).
	- error.cc, smiltime.cc: apply patch from Jarod Wilson to fix build
	  on gcc 4.4.
	- ieee1394io.{h,cc}: added AVC:isHDV().
	- dvgrab.cc: try to automatically detect HDV devices and set file format.

----- v3.4 released -----

2009-02-14  Dan Dennedy <dan@dennegy.org>
	- main.cc: bugfix failure to start due to regression in 3.3.

----- v3.3 released -----

2009-01-14  Dan Dennedy <dan@dennedy.org>
	- ieee1394io.{h,cc}, dvgrab.{h,cc}: separate the warnings for dropped
	  versus damaged frames.
	- main.cc: silence warnings about inability to change scheduling class
	  and lock memory.
	- ieee1394io.cc: return false on invalid timecode in AVC::Timecode().
	- io.c: read terminal every 125ms instead of 1s.
	- dvgrab.cc: in interactive mode display invalid timecode as
	  "--:--:--:--" instead of "ff:ff:ff:ff" and suppress filename when
	  no capture is in progress instead of displaying "stdout".
	- dvgrab.cc: reduce the frequency of AVC::TransportStatus calls making
	  it consistently every ~125ms.